refine ginext
