# protoc-gen-go-gin/example/api/product/app/v1/v1.swagger.json
@@ -16,6 +16,44 @@
     "application/json"
   ],
   "paths": {
+    "/login": {
+      "post": {
+        "operationId": "BlogService_Login",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1LoginResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "username",
+            "description": "@inject_tag: bind:\"form,name=username\" validate:\"required,non_blank,min_len=2,pattern=#abc123\"",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "description": "@inject_tag: bind:\"form,name=password\" validate:\"required,non_blank,min_len=6\"",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "BlogService"
+        ]
+      }
+    },
     "/v1/author/{author_id}/articles": {
       "get": {
         "operationId": "BlogService_GetArticles",
@@ -304,6 +342,14 @@
         "file": {
           "type": "string",
           "format": "byte"
+        }
+      }
+    },
+    "v1LoginResp": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
         }
       }
     },
